--- a/_config.yml
+++ b/_config.yml
@@ -25,10 +25,8 @@ description:
 navbar-links:
   About Me: "aboutme"
   Resources:
-    - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
-    - Learn markdown: "http://www.markdowntutorial.com/"
-    - GitHub Pages: "https://pages.github.com/"
-  Author's home: "https://www.facebook.com/sebestyen.hompot"
+    - Hokkien Project: "https://zenodo.org/record/2631767"
+   Author's home: "https://www.facebook.com/sebestyen.hompot"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
