--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: Sebestyen Hompot's Website
+title: Sebestyén Hompot's Website
 
 # Short description of your site
 description:
@@ -61,7 +61,7 @@ footer-link-col: "#404040"
 # Change all these values or delete the ones you don't want.
 # Important: you must keep the "name" parameter, everything else you can remove
 author:
-  name: Sebestyen Hompot
+  name: Sebestyén Hompot
 
 # Select your active Social Network Links.
 # Uncomment the links you want to show in the footer and add your information to each link.
